# ace2-alignment

./: ace2_orthologs.fasta  main.ipynb  pyproject.toml  revised.ipynb
